# kcp-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
benches/: throughput.rs
docs/: performance_design.md
examples/: echo.rs
src/: codec.rs  constants.rs  kcp.rs  lib.rs  ring_buffer.rs  segment.rs  sequence.rs  time.rs
src/fec/: buffer.rs  decoder.rs  encoder.rs  gf256.rs  mod.rs
tests/: fec_integration.rs  integration.rs
