[package]
name = "kcp-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust implementation of the KCP protocol, a reliable UDP-based protocol for real-time applications"
keywords = ["networking", "udp", "reliable", "gamedev", "realtime"]
categories = ["network-programming", "game-development"]

[features]
default = []
std = []
# Use smaller buffer sizes for testing (avoids stack overflow)
small-buffers = []

[dependencies]

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }

# Tests run with small-buffers to avoid stack overflow
[[test]]
name = "integration"
required-features = ["small-buffers"]

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.test]
# Increase stack size for tests
opt-level = 1
